# network-anomaly-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
configs/: default.yaml
docs/: research_protocol.md
matlab/: README.md  analyze_results.m  plot_roc_comparison.m  statistical_significance_test.m
notebooks/: research_walkthrough.ipynb
paper/: report_template.md
scripts/: generate_data.py  plot_results.py  run_benchmark.py  run_experiment.py
src/nadlab/: __init__.py  baselines.py  data.py  experiment.py  metrics.py  models.py  preprocessing.py  training.py
tests/: test_data.py  test_metrics_and_baselines.py  test_models.py  test_preprocessing.py
